--- a/1.app-build/Dockerfile
+++ b/1.app-build/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:latest
-MAINTAINER Deepak Muley "deepak.muley@nutanix.com"
+MAINTAINER Deepak Muley "deepak.muley@xyz.com"
 RUN apt-get update -y
 RUN apt-get install -y python-pip python-dev build-essential
 COPY . /app
